# SenAI

./: .gitignore  IMPROVEMENTS.md  README.md
backend/: .env  .gitignore  UpdateBackend.md  app.py  app_config.py  auth.py  celery_worker.py  dependencies.py  embedding_service.py  fine_tuning_service.py  llm_service.py  models.py  pattern_analysis_service.py  rate_limit.py  requirements.txt  routes.py  routes_analysis.py  semantic_search_service.py  start_celery.bat  start_celery.sh
backend/config/: app_config.py  models.py  pydantic_models.py
backend/factories/: __init__.py  llm_factory.py
backend/middleware/: api_key_middleware.py  auth.py  compression_middleware.py  logging_middleware.py  metrics_middleware.py  rate_limit.py  security.py  security_headers.py
backend/migrations/: add_database_indexes.py  create_api_keys_tables.py  create_cache_entries_table.py  encrypt_sensitive_fields.py  fix_api_keys_boolean.py
backend/repositories/: __init__.py  api_key_repository.py  base_repository.py  cache_repository.py  conversation_repository.py  embedding_repository.py  feedback_repository.py  task_repository.py
backend/routes/: api_keys.py  async_routes.py  cache_routes.py  database_optimization.py  routes.py  routes_analysis.py
backend/services/: advanced_cache_service.py  api_key_service.py  async_cache_service.py  async_database_config.py  async_helpers.py  background_tasks.py  batch_processing.py  cache_components.py  cache_operations.py  cache_service.py  celery_config.py  celery_tasks.py  celery_worker_manager.py  database_config.py  embedding_model_loader.py  embedding_precompute.py  embedding_service.py  encryption_service.py  error_handler.py  feedback_service.py  llm_providers.py  llm_service.py  metrics_service.py  pattern_analysis_service.py  query_cache_service.py  query_optimizer.py  redis_auto_config.py  semantic_search_service.py
backend/tests/: conftest.py  test_embedding_service.py  test_encryption.py  test_llm_service.py  test_models.py
frontend/: .gitignore  CMakeLists.txt  FRONTEND_IMPROVEMENTS.md
frontend/src/: GDIResourceManager.cpp  GDIResourceManager.h  HttpClient.cpp  HttpClient.h  JsonParser.cpp  JsonParser.h  MainWindow.cpp  MainWindow.h  MainWindowChatMessages.cpp  MainWindowConversations.cpp  MainWindowHelpers.h  MainWindowLogic.cpp  MainWindowMessageHelpers.cpp  MainWindowRender.cpp  MainWindowRenderControls.cpp  MainWindowRenderSidebar.cpp  MainWindowSettings.cpp  MainWindowUI.cpp  UiStrings.h  main.cpp
frontend/src/core/: ErrorHandler.cpp  ErrorHandler.h  ExportService.cpp  ExportService.h  GDIResourceManager.cpp  GDIResourceManager.h  HttpClient.cpp  HttpClient.h  JsonParser.cpp  JsonParser.h  UiStrings.h
frontend/src/ui/: MainWindow.cpp  MainWindow.h  MainWindowChatMessages.cpp  MainWindowExitConfirm.cpp  MainWindowExport.cpp  MainWindowExportMessage.cpp  MainWindowHelpers.cpp  MainWindowLogic.cpp  MainWindowMessageHandlers.cpp  MainWindowRender.cpp  MainWindowRenderControls.cpp  MainWindowRenderSidebar.cpp  MainWindowSearch.cpp  MainWindowSettings.cpp  MainWindowUI.cpp  UiConfig.h  UiConstants.h
